plugins {
    id "application"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

dependencies {
    implementation "org.ow2.asm:asm:9.10.1"
    implementation "org.ow2.asm:asm-tree:9.10.1"
}

application {
    mainClass = "dev.folium.patcher.FoliumPatcherMain"
}
